--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,4 @@
-<mat-toolbar>
-  <div class="title">
-    <button mat-icon-button>
-     </button>
-     <span routerLink="home">InfoFuncionario</span>
-  </div>
-  <div class="icons">
-    <button mat-icon-button (click)="openSnackBar('Me da 10!')">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button (click)="openSnackBar('Vai me dar 10, né?')">
-      <mat-icon>share</mat-icon>
-    </button>
-  </div>
-</mat-toolbar>
+<app-header></app-header>
 
 <div class="button-row">
   <button routerLink="home" mat-button active routerLinkActive="button-active">Home</button>
