--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@
     height: 8vh;
     width: 100%;
 
-    font-size: 1.5vw;
+    font-size: 1rem;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 600;
 
@@ -31,11 +31,6 @@
   .button-active {
     -webkit-text-fill-color: white;
     background-image: $primary-color;
-  }
-
-  main {
-    width: 100%;
-    height: 76vh;
   }
 
   footer {
