--- a/src/app/pages/funcionarios/funcionarios.component.scss
+++ b/src/app/pages/funcionarios/funcionarios.component.scss
@@ -1,70 +1,77 @@
 @import '../../../styles.scss';
 
-.host {
+:host {
+  height: 100%;
   width: 100%;
-  height: 100vh;
-  margin-top: 5vh;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .container {
-    width: 80%;
-    height: 100%;
+  .host {
+    width: 100%;
+    height: 70%;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 5vw;
+    align-items: center;
 
-    .boxes {
-      width: 250px;
-      height: 50%;
-
-      border-radius: 1rem;
-      background-image: $primary-color;
+    .container {
+      width: 80%;
+      height: 70%;
 
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      align-items: center;
+      flex-wrap: wrap;
+      gap: 5vw;
 
-      color: white;
+      .boxes {
+        width: 250px;
+        height: 50%;
 
-      :nth-child(2), :nth-child(3) {
-        padding: 10px;
-      }
-
-      img {
-        display: flex;
-        justify-content: center;
         border-radius: 1rem;
+        background-image: $primary-color;
 
-        width: 50%;
-        height: 40%;
-
-        background-color: black;
-      }
-
-      .descricao {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        font-family: Arial;
-      }
+        color: white;
 
-      .email {
-        background-color: gray;
-        border-radius: 1rem;
-        padding: auto;
+        :nth-child(2), :nth-child(3) {
+          padding: 10px;
+        }
 
-        width: 80%;
+        img {
+          display: flex;
+          justify-content: center;
+          border-radius: 1rem;
 
-        text-align: center;
-        font-family: Verdana;
+          width: 50%;
+          height: 40%;
+
+          background-color: black;
+        }
+
+        .descricao {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          font-family: Arial;
+        }
+
+        .email {
+          background-color: gray;
+          border-radius: 1rem;
+          padding: auto;
+
+          width: 80%;
+
+          text-align: center;
+          font-size: 0.8rem;
+          font-family: Verdana;
+        }
       }
     }
   }
