--- a/src/app/shared/description/description.component.scss
+++ b/src/app/shared/description/description.component.scss
@@ -20,7 +20,7 @@
     -webkit-text-fill-color: transparent;
 
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 2.5vw;
     margin-bottom: 2vh;
   }
 
@@ -32,7 +32,7 @@
     mat-card-content {
       white-space: break-spaces;
       font-weight: 900;
-      font-size: 1rem;
+      font-size: 1.2vw;
 
       background-image: $primary-color;
       background-clip: text;
