--- a/src/app/pages/cadastro2/cadastro2.component.scss
+++ b/src/app/pages/cadastro2/cadastro2.component.scss
@@ -30,7 +30,8 @@
         gap: 10px;
 
         button {
-          font-size: 1rem;
+          width: 30%;
+          font-size: 1.2vw;
           font-family: 'Times New Roman', Times, serif;
           font-weight: 600;
           height: 5vh;
@@ -41,6 +42,7 @@
         }
 
         section {
+          width: 50%;
           height: 5vh;
           border: 1px solid black;
           border-radius: 0.5rem;
@@ -56,7 +58,7 @@
             background: transparent;
 
             text-align: center;
-            font-size: 1rem;
+            font-size: 1.5vw;
           }
         }
       }
@@ -88,8 +90,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
         width: 100%;
+
+        ::ng-deep .mat-tab-label {
+          font-size: 2vw;
+        }
       }
 
       .small-box {
@@ -103,7 +108,7 @@
 
       .small-box {
         background-color: $secondary-color;
-        font-size: 1rem;
+        font-size: 2vw;
         height: 100px;
         width: 250px;
       }
