--- a/src/app/shared/dialog/dialog.component.scss
+++ b/src/app/shared/dialog/dialog.component.scss
@@ -1,22 +1,37 @@
 @import '/src/styles.scss';
 
-main {
-  width: 85%;
-  height: 83%;
-  padding: 15% 0 0 15%;
+:host {
+  display: flex;
+  width: 100%;
+  height: 100%;
 
-  -webkit-text-fill-color: white;
-  background-color: greenyellow;
+  main {
+    width: 100%;
+    height: 100%;
+    padding: 5%;
 
-  h1 {
-    font-size: 2rem;
+    -webkit-text-fill-color: white;
+    background-color: greenyellow;
+
+    h1 {
+      margin-top: 5%;
+      text-align: center;
+      font-size: 2rem;
+    }
+
+    div {
+      width: 100%;
+      height: 30%;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      font-size: 1rem;
+    }
   }
 
-  div {
-    font-size: 1rem;
+  .erro {
+    background-color: red;
   }
-}
-
-.erro {
-  background-color: red;
 }
